FFN_Inference updated

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 *.LAPTOP-C90H6OBH
 PythonFlies/dnnTraining/FFN/savedModelsWav/checkpoint
 *.pyc
+PythonFlies/dnnTraining/FFN/savedModelsWav/my_test_model8.ckpt.index.tempstate10124545794619090630
