--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 PythonFlies/dnnTraining/FFN/savedModelsWav/checkpoint
 *.pyc
 PythonFlies/dnnTraining/FFN/savedModelsWav/my_test_model8.ckpt.index.tempstate10124545794619090630
+*.wav
+*.pyc
