--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ PythonFlies/dnnTraining/FFN/savedModelsWav/checkpoint
 PythonFlies/dnnTraining/FFN/savedModelsWav/my_test_model8.ckpt.index.tempstate10124545794619090630
 *.wav
 *.pyc
+*.MHPWIN10230818
+*.MHPWIN10230818
